[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GDEditor/Scenes/ContextStateDialog.gd" type="Script" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/ValueArrayDialog.tscn" type="PackedScene" id=2]

[node name="ContextStateDialog" type="WindowDialog"]
margin_left = 326.0
margin_top = 17.0
margin_right = 632.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 146 )
popup_exclusive = true
window_title = "State Editor"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 296.0
margin_bottom = 136.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 0
columns = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 120.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
text = "Type"

[node name="TypeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 120.0
margin_right = 286.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "string"
items = [ "string", null, false, 0, null, "bool", null, false, 1, null, "int", null, false, 2, null, "float", null, false, 3, null ]
selected = 0

[node name="ArrayLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
text = "Array"

[node name="ArrayColumn" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 120.0
margin_top = 30.0
margin_right = 286.0
margin_bottom = 54.0

[node name="ArrayCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer/ArrayColumn"]
margin_right = 24.0
margin_bottom = 24.0
flat = true

[node name="ArraySize" type="SpinBox" parent="MarginContainer/VBoxContainer/GridContainer/ArrayColumn"]
margin_left = 28.0
margin_right = 166.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 12.0
value = 1.0
rounded = true
editable = false

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Value"

[node name="ValueEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 120.0
margin_top = 64.0
margin_right = 286.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="ValueCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_top = 98.0
margin_right = 120.0
margin_bottom = 122.0

[node name="ValueArray" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_left = 120.0
margin_top = 98.0
margin_right = 286.0
margin_bottom = 122.0
text = "Array"

[node name="ValueArrayDialog" parent="MarginContainer/VBoxContainer/GridContainer/ValueArray" instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 286.0
margin_bottom = 126.0
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 136.0
margin_bottom = 20.0
text = "Cancel"

[node name="ConfirmBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 20.0
text = "Apply"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/TypeOption" to="." method="_on_TypeOption_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer/ArrayColumn/ArrayCheck" to="." method="_on_ArrayCheck_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/ArrayColumn/ArraySize" to="." method="_on_ArraySize_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/ValueArray" to="." method="_on_ValueArray_pressed"]
[connection signal="item_edit_focus_exited" from="MarginContainer/VBoxContainer/GridContainer/ValueArray/ValueArrayDialog" to="." method="_on_ValueEdit_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
